Fixed layout issues in Firefox.

--- a/assets/css/index.styl
+++ b/assets/css/index.styl
@@ -18,6 +18,7 @@
    position: relative
    
 .card-wrap
+   position: relative
    float: left
    -webkit-perspective: 1000
    -moz-perspective: 1000
@@ -28,7 +29,7 @@
    user-select: none
    
    .highlight
-      display:none
+      display: none
       position: absolute
       top: 2px
       right: 2px
@@ -37,6 +38,7 @@
       border: 2px solid highlight-blue
       background: rgba(2,119,158,0.65)
       cursor: pointer
+      z-index: 1
 
    &.selected .highlight
       cursor:pointer
@@ -118,7 +120,6 @@
    bottom: 0
    left: 0
 .card-back
-   z-index: 2
    img
       width: 100%
       display: block
